--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -1,3 +1,7 @@
+body{
+    margin: 0;
+    padding: 0;
+}
 span {
     font-style: italic;
 }
@@ -31,6 +35,40 @@ font-weight: bold;
 /*верхняя навигационная панель*/
 
 .nav-conteiner {
+    background-color: rgb(173, 216, 246);
     display: flex;
     justify-content: space-between;
 }
+.nav-conteiner>nav>ul {
+display: flex;
+list-style: none;
+align-items: center;
+margin: 0;
+padding: 0;
+}
+.nav-conteiner>nav>ul>li>a {
+    display: block;
+    padding: 10px;
+    border-style: solid;
+    border-width: 0.5px;
+}
+@media(max-width: 900px) {
+.nav-conteiner{
+    flex-direction: column;
+}  
+}
+.text-page {
+    padding-left: 15px;
+}
+.page{
+    display: flex;
+    justify-content: center;
+}
+.header {
+width: 14%;
+background-color: aquamarine;
+}
+.section{
+width: 82%;
+}
+
