--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -71,4 +71,19 @@ background-color: aquamarine;
 .section{
 width: 82%;
 }
+.header>ol{
+    list-style: none;
+    border-bottom-style: solid;
+    border-width: 0.5px;
+    margin: 10;
+    padding: 0;
+    padding-bottom: 10px;
 
+}
+.header>div{
+    width: 100%;
+}
+.header>div>img{
+    width: 100%;
+    
+}
