--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -1,89 +1,20 @@
-body{
-    margin: 0;
-    padding: 0;
+#main2 {
+    background-color: rgb(133, 133, 133);
 }
-span {
-    font-style: italic;
-}
-
-.list-conteiner {
-    display: inline-block;
-border-style: solid;
-border-width: 0.5px;
-padding-right: 20px;
+div{
+    background-color: springgreen;
 }
 
-.list-conteiner>p {
-text-align: center;
-font-weight: bold;
+.main#main2 {
+    background-color: rgb(226, 94, 33);
 }
-.img-conteiner{
-    float: right;
+.main.border-div {
     border-style: solid;
-    border-width: 0.5px;
-    margin-left: 10px;
-    padding: 5px;
+    background-color: darkred;
 }
-.img-conteiner>div {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+.main{
+    border-style: dotted !important;
 }
-.logo-html {
-    max-width: 70px;
-}
-/*верхняя навигационная панель*/
-
-.nav-conteiner {
-    background-color: rgb(173, 216, 246);
-    display: flex;
-    justify-content: space-between;
-}
-.nav-conteiner>nav>ul {
-display: flex;
-list-style: none;
-align-items: center;
-margin: 0;
-padding: 0;
-}
-.nav-conteiner>nav>ul>li>a {
-    display: block;
-    padding: 10px;
-    border-style: solid;
-    border-width: 0.5px;
-}
-@media(max-width: 900px) {
-.nav-conteiner{
-    flex-direction: column;
-}  
-}
-.text-page {
-    padding-left: 15px;
-}
-.page{
-    display: flex;
-    justify-content: center;
-}
-.header {
-width: 14%;
-background-color: aquamarine;
-}
-.section{
-width: 82%;
-}
-.header>ol{
-    list-style: none;
-    border-bottom-style: solid;
-    border-width: 0.5px;
-    margin: 10;
-    padding: 0;
-    padding-bottom: 10px;
-
-}
-.header>div{
-    width: 100%;
-}
-.header>div>img{
-    width: 100%;
-    
+.main p {
+    font-size: 35px ;
 }
