--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -1,20 +1,9 @@
-#main2 {
-    background-color: rgb(133, 133, 133);
+html {
+    font-size: 30px;
 }
-div{
-    background-color: springgreen;
+ul{
+    list-style: none;
 }
-
-.main#main2 {
-    background-color: rgb(226, 94, 33);
-}
-.main.border-div {
-    border-style: solid;
-    background-color: darkred;
-}
-.main{
-    border-style: dotted !important;
-}
-.main p {
-    font-size: 35px ;
+li{
+    font-size: 0.5em;
 }
