--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -1,9 +1,25 @@
-html {
+html{
     font-size: 30px;
 }
-ul{
-    list-style: none;
+p {
+font-size: 2em;
+
 }
-li{
-    font-size: 0.5em;
+div{
+    width: 300px;
+    height: 300px;
+    margin: 4rem;
+    font-size: 0.5rem;
+}
+#red {
+background-color: rgb(252, 36, 36);
+}
+#green {
+background-color: rgb(230, 233, 44);
+}
+#eylow {
+background-color: rgb(24, 187, 18);
+}
+#grey {
+  background-color: rgb(117, 111, 111);  
 }
